# multi_ropod_sim

./: .gitignore  README.md  repository.rosinstall
ropod_gazebo/: CMakeLists.txt  README.md  package.xml  setup.py
ropod_gazebo/common/models/amk_basement/: amk_basement.sdf
ropod_gazebo/common/models/brsu_ground_floor/: brsu_ground_floor.sdf
ropod_gazebo/common/models/brsu_topological_map/: model.config  (+1 more)
ropod_gazebo/common/worlds/: brsu_ground_floor.world  brsu_topological_map.world
ropod_gazebo/config/: amk_basement.yaml  multi_ropod_sim.rviz
ropod_gazebo/config/move_base_config/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
ropod_gazebo/config/rviz_config/: post_group_config.yaml  pre_group_config.yaml  robot_group_config.yaml
ropod_gazebo/launch/: maneuver_navigation.launch  move_base_dwa.launch  move_base_ropod.launch  move_base_teb.launch  move_base_teb_ropod.launch  multi_robot.launch  ropod_sim.launch  spawn_multiple_robots.launch  spawn_single_urdf_robot.launch  teleop_keyboard.launch
ropod_gazebo/ros/generated_files/: multi_ropod_sim.rviz  spawn_multiple_robots.launch
ropod_gazebo/ros/launch/: amcl.launch  move_base_dwa.launch  move_base_teb.launch  multi_robot.launch  ropod_sim.launch  spawn_multiple_robots.launch  spawn_single_urdf_robot.launch  teleop_keyboard.launch
ropod_gazebo/ros/scripts/: generate_multi_robot_launch.py
ropod_gazebo/scripts/: GenerateMultiRobotLaunch.py  generate_multi_robot_launch.py  ros_frame_pub
ropod_gazebo/scripts/resources/: amk_basement.yaml  brsu_ground_floor.yaml
(+32 files in other folders)
