<?xml version="1.0"?>
<package format="2">
  <name>ropod_gazebo</name>
  <version>0.1.0</version>
  <description>Launches multiple ROPOD in Gazebo simulator</description>

  <maintainer email="lakshadeep.naik@h-brs.de">Lakshadeep</maintainer>

  <license>GPLv3</license>

  <author email="lakshadeep.naik@h-brs.de">Lakshadeep Naik</author>
  <author email="sushant.chavan@smail.inf.h-brs.de">Sushant Chavan</author>
  <author email="dharmingeo@gmail.com">Dharmin B.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ropod_description</build_depend>
  <exec_depend>ropod_description</exec_depend>

  <build_depend>ropod_sim_model</build_depend>
  <exec_depend>ropod_sim_model</exec_depend>

  <export>
  </export>

</package>
